--- a/2-guia/ejercicios-2/ej-7-2.tex
+++ b/2-guia/ejercicios-2/ej-7-2.tex
@@ -128,7 +128,7 @@
         las fracciones de los bordes solo para ayuda visual.\par
         En $\llamada2$ multiplico por $1 = \cyan{\frac{k+1}{k+1}}$ y lo ubico en los lugares
         \textit{apropiados} para que me aparezca la \purple{hipótesis inductiva}.\par
-        Si te preguntás qué pasó en "\red{!}", eso son cuentas, \textit{simplificá}, \textit{factorzá} y yo
+        Si te preguntás qué pasó en "\red{!}", eso son cuentas, \textit{simplificá}, \textit{factorizá} y yo
         que sé, que te dejo a vos, por mi parte yo \href{https://github.com/nad-garraz/algebraUno}{\Large\faIcon{hands-wash}}.\medskip
 
         Como $p(1),\, p(k) \ytext p(k+1)$ son verdaderas por el principio de inducción $p(n)$ es verdadera $\paratodo n \en \naturales$.
