--- a/macros/estructura-ejercicios.tex
+++ b/macros/estructura-ejercicios.tex
@@ -12,7 +12,13 @@
 \subsubsection*{Ejercicios de la guía:}
 
 \foreach \x in {1,...,\cantidadEjerciciosGuia} { % cantidad de ejercicios de la guía
-		\input{./ejercicios-\guia/ej-\x-\guia.tex} }
+		\IfFileExists{./ejercicios-\guia/ej-\x-\guia.tex}{
+			\input{./ejercicios-\guia/ej-\x-\guia.tex}
+		}{
+			\typeout{¡Atención! El archivo ./ejercicios-\guia/ej-\x-\guia.tex no está.
+            Revisar variable: 'cantidadEjerciciosGuia` en \guia-sol.tex}
+		}
+	}
 
 \newpage % página nueva
 
@@ -23,5 +29,10 @@
 \subsubsection*{\hypertarget{extras-\guia}{{\Large\color{orange}{\faIcon{fire}}} Ejercicios extras:}}
 
 \foreach \x in {1,...,\cantidadEjerciciosExtras} { % cantidad de ejercicios extras
-		\input{./ejercicios-\guia-extra/ej-extra-\x-\guia.tex}
+		\IfFileExists{./ejercicios-\guia-extra/ej-extra-\x-\guia.tex}{
+			\input{./ejercicios-\guia-extra/ej-extra-\x-\guia.tex}
+		}{
+			\typeout{¡Atención! El archivo ./ejercicios-\guia-extra/ej-extra-\x-\guia.tex no está.
+             Revisar variable: 'cantidadEjerciciosExtras' en \guia-sol.tex}
+		}
 	}
