Subo PDFs actualizados

--- a/7-guia/ejercicios-7-extra/ej-extra-7-7.tex
+++ b/7-guia/ejercicios-7-extra/ej-extra-7-7.tex
@@ -62,8 +62,9 @@ $\llamada1$ Si es doble una de las complejas, también debe serlo su conjugado, 
 $f\en \racionales[X]$.\bigskip
 
 Nos queda cumplir que $f(0) = 33$, si bien ahora $f(0) = -11$. Acá tenemos que tener en cuenta
-la primera condición. $f$ es mónico así que tenemos que proponer otro factor en $\racionales[X]$
-el candidato es $(X-3)$, dado que en 0 vale $-3$ y así $f(0) = -11\cdot -3 = 33$.\par
+la primera condición. $f$ es \textit{mónico}, así que no podemos corregir el valor con coeficiente independiente.
+Hay que proponer otro factor en $\racionales[X]$, que al evaluar de el número que al multiplicarse con $-11$ nos dé
+33. El candidato es $(X-3)$, dado que en 0 vale $-3$ y así $f(0) = (-11) \cdot (-3) = 33$ como queremos.\par
 
 El $f \en\racionales[X]$ que cumple lo pedido:
 $$
