--- a/macros/indice.tex
+++ b/macros/indice.tex
@@ -8,27 +8,28 @@
 \vspace{4cm}
 
 \begin{center}
-  \hypertarget{indice-\guia}{\Large\textit{Choose your destiny: }}
+  \hypertarget{indice-\guia}{\Large\textit{Choose your destiny: }}\par
+        {\tiny\textit{(dobleclick en los ejercicio para saltar) }}
 
-	\begin{itemize}
-		\item \hyperlink{teoria-\guia}{Notas teóricas}
+  \begin{itemize}
+    \item \hyperlink{teoria-\guia}{Notas teóricas}
 
-		\item
-		      Ejercicios de la guía:
-		      \begin{multicols}{8}
-			      \foreach \ejer in {1,...,\cantidadEjerciciosGuia}{
-					      \refEjercicio{ej:\ejer}\\
-				      }
-		      \end{multicols}
+    \item
+          Ejercicios de la guía:
+          \begin{multicols}{8}
+            \foreach \ejer in {1,...,\cantidadEjerciciosGuia}{
+                \refEjercicio{ej:\ejer}\\
+              }
+          \end{multicols}
 
-		\item Ejercicios Extras
-		      \begin{multicols}{8}
-			      \foreach \extras in {1,...,\cantidadEjerciciosExtras}{
-					      \refEjExtra{ejExtra:\extras}\\
-				      }
-		      \end{multicols}
+    \item Ejercicios Extras
+          \begin{multicols}{8}
+            \foreach \extras in {1,...,\cantidadEjerciciosExtras}{
+                \refEjExtra{ejExtra:\extras}\\
+              }
+          \end{multicols}
 
-	\end{itemize}
+  \end{itemize}
 \end{center}
 
 \newpage % nueva página
