Agrego enunciados de parciales para hacer

--- a/7-guia/ejercicios-7-extra/ej-extra-7-7.tex
+++ b/7-guia/ejercicios-7-extra/ej-extra-7-7.tex
@@ -51,11 +51,13 @@ $$
 
 Hasta el momento tenemos:\par
 $$
+\begin{array}{c}
 f =
 \ob{(X - (1+2\sqrt{3})) (X - (1-2\sqrt{3}))}{X^2 - 2X - 11}
 \ub{(X - (-\frac{1}{2} + \frac{\sqrt{3}}{2}))^{2^{\llamada1}}
-(X - (-\frac{1}{2} - \frac{\sqrt{3}}{2}))^{2^{\llamada1}}}{(X^2 + X + 1)^2} =
-(X^2 - 2X - 11)(X^2 + X + 1)^2
+(X - (-\frac{1}{2} - \frac{\sqrt{3}}{2}))^{2^{\llamada1}}}{(X^2 + X + 1)^2} =\\
+=(X^2 - 2X - 11)(X^2 + X + 1)^2
+\end{array}
 $$
 
 $\llamada1$ Si es doble una de las complejas, también debe serlo su conjugado, porque
