--- a/macros/encabezado-pie.tex
+++ b/macros/encabezado-pie.tex
@@ -2,8 +2,8 @@
 
 \title{Álgebra I\\ Práctica \guia\ Resuelta} % título
 \author{Por alumnos de Álgebra I\\
-Facultad de Ciencias Exactas y Naturales \\
-UBA} % autores y lugar
+	Facultad de Ciencias Exactas y Naturales \\
+	UBA} % autores y lugar
 \date{} % Así no aparece la fecha 
 \maketitle  % para que aparezca el título en el documento
 
@@ -17,19 +17,21 @@ UBA} % autores y lugar
 \fancyhead[R]{Página \thepage} %% encabezado derecho
 
 \fancyfoot[EL]{
-  \href{https://github.com/nad-garraz/algebraUno}{\small \faIcon{github}
-  ¡Aportá! Correcciones, subiendo ejercicios,
-  \yellow{\FiveStar} al repo, críticas, todo sirve.}
-  }    % pie izquierdo pares
+	\href{https://github.com/nad-garraz/algebraUno}{\small \faIcon{github}
+		¡Aportá! Correcciones, subiendo ejercicios,
+		\yellow{\FiveStar} al repo, críticas, todo sirve.}
+}    % pie izquierdo pares
 \fancyfoot[OL]{
-  \href{https://t.me/+1znt2GV1i8cwMTNh}{\small\faIcon{telegram} ¿Errores? Mandanos tu solución,
-  \textit{\underline{prolija}}, así lo arreglamos.
-  }
-  } % pie izquierdo impares
+	\href{https://t.me/+1znt2GV1i8cwMTNh}{\small\faIcon{telegram} ¿Errores? Mandá tu solución,
+		\textit{\underline{entendible y coqueta}}, así corregimos.
+	}
+} % pie izquierdo impares
 
 % \fancyfoot[EC]{\small \update}                                                                        % pie izquierdo pares
-\fancyfoot[OR]{\small \hyperlink{indice-\guia}{
-  Ir a índice $\uparrow$}\\
- \small \update }                           % pie derecho pares
+\fancyfoot[OR]{
+        \small\hyperlink{indice-\guia}{
+                Ir a índice $\uparrow$\\ \vspace{-5pt}
+		\update }
+}             % pie derecho pares
 
 \fancyfoot[ER]{\small \hyperlink{indice-\guia}{ Ir a índice $\uparrow$}}                            % pie derecho impares
