--- a/macros/preamble-general.tex
+++ b/macros/preamble-general.tex
@@ -9,7 +9,7 @@
 \usepackage[T1]{fontenc} % tildes
 \usepackage[utf8]{inputenc} % Para poder escribir con tildes en el editor.
 \usepackage[english]{babel} % Para cortar las palabras en silabas, creo.
-\usepackage[ddmmyyyy]{datetime}
+\usepackage[ddmmyy]{datetime}
 \usepackage{amsmath} % Soporte de mathmatics
 \usepackage{mathtools} % Más herramientas para matemáctica
 \usepackage{amssymb} % fuentes de mathmatics
