--- a/5-guia/ejercicios-5/ej-4-5.tex
+++ b/5-guia/ejercicios-5/ej-4-5.tex
@@ -1,35 +1,62 @@
-\ejercicio
-Hallar, cuando existan, todas las soluciones de las siguientes ecuaciones de congruencia:
-
-\separadorCorto
+\begin{enunciado}{\ejercicio}
+  Hallar, cuando existan, todas las soluciones de las siguientes ecuaciones de congruencia:
+  \begin{multicols}{4}
+    \begin{enumerate}[label=\roman*)]
+      \item $\congruencia{17X}{3}{11}$
+      \item $\congruencia{56X}{28}{35}$
+      \item $\congruencia{56X}{2}{884}$
+      \item $\congruencia{78X}{30}{12126}$
+    \end{enumerate}
+  \end{multicols}
+\end{enunciado}
 
 \begin{enumerate}[label=\roman*)]
-	\item $\congruencia{17X}{3}{11} \flecha{respuesta} \congruencia{X}{6}{11} $\\
-	      \red{pasar}
+  \item $\congruencia{17X}{3}{11}
+          \sisolosi
+          \congruencia{6X}{3}{11}
+          \Sii{$\times 2$}[$(\Leftarrow) 2 \cop 11$]
+          \congruencia{X}{6}{11} $\Tilde
 
-	\item $\congruencia{56X}{28}{35}\\
-		      \llave{l}{
-			      \congruencia{56X}{28}{35} \sisolosi
-			      \congruencia{7X}{21}{35} \stackrel{\red{?}}\sisolosi
-			      7X - 35K = 21\\
-			      \flecha{a}[ojo] (X,K) = (-2,-1) + q \cdot (-5, 1)\\
-			      \congruencia{X}{-2}{5} \sisolosi \congruencia{X}{3}{5} = \set{\dots, -2, 3, 8, \dots, 5q+3}
-		      }\\
-		      \flecha{respuesta} \congruencia{X}{3}{5} $
-	      \red{corroborar}
+  \item $
+          \congruencia{56X}{28}{35}
+          \sisolosi
+          \congruencia{21X}{28}{35}
+          \Sii{coprimizo}[$(21:35) = 7$]
+          \congruencia{3X}{4}{5}
+          \Sii{$\times 7$}[$7\cop 5$]
+          \congruencia{X}{3}{5} \Tilde
+        $
 
-	\item
-	\item $\congruencia{78X}{30}{12126}  \to 78X - 12126 Y = 30 \flecha{$(78:12126) = 6$}[coprimizando] 13X - 2021 Y = 5$\\
-	      Busco solución particular con algo parecido a Euclides:\\
-	      $\llave{l}{
-			      \blue{2021} =  \blue{13} \cdot 155 + 6\\
-			      13 =  6 \cdot 2 + 1
-		      }\flecha{Escribo al 1 como}[combinación de \blue{13} y\blue{2021}]
-		      1 = \blue{13} \cdot 311 + \blue{2021} \cdot (-2)
-		      \flecha{quiero}[al 5]
-		      5 =  \blue{13}\cdot 1555 + \blue{2021} \cdot (-10)$\\
+  \item $
+          \congruencia{56X}{2}{884}
+          \sisolosi
+          \congruencia{28X}{1}{442}
+          \text{ tiene solución }
+          \Sii{$(28:442)   \stackrel{\red{?}}{\divideA} 1$}[pero $2\noDivide 1$]
+          X = \vacio \Tilde
+        $
 
-	      Respuesta: $\boxed{\congruencia{78X}{30}{12126}
-			      \stackrel{\red{?}} \sisolosi \congruencia{X}{1555}{2021}}$
-
+  \item $$
+          \begin{array}{c}
+            \congruencia{78X}{30}{12126}
+            \Sii{coprimizar}[(78:12126) = 6]
+            \congruencia{13X}{5}{2021},\,                                                                                   \\
+            \textit{{dado que $\ob{(13:2021)}{1} \divideA 5$ hay solución.}}                                                \\
+            \text{Busco solución particular con Euclides. Escribo al 5 como combinación entera de \blue{13} y \blue{2021}:} \\
+            \llave{c}{
+            \blue{2021} =  \blue{13} \cdot 155 + 6                                                                          \\
+              \blue{13} =  6 \cdot 2 + 1
+            }
+            \flecha{1 como combinación}[de \blue{13} y \blue{2021}]
+            1 = \blue{13} \cdot 311 + \blue{2021} \cdot (-2)                                                                \\
+            1 = 13 \cdot 311 + 2021 \cdot (-2)
+            \Sii{$\times 5$}[$(\Leftarrow) 5 \cop 2021$]
+            5 =  13\cdot 1555 + 2021 \cdot (-10)                                                                            \\
+            13\cdot \ub{1555}{\text{Solución particular}} = 2021 \cdot 10  + 5
+            \Entonces{Solución general}[\red{!!}]
+            \boxed{ \congruencia{X}{1555}{2021}} \Tilde
+          \end{array}
+        $$
+                Si no ves el paso \red{!!}, hacé el procedimiento para resolver la diofántica, $13X + 2021Y = 5$ que es equivalente
+                a $\congruencia{13X}{5}{2021}$.
 \end{enumerate}
