--- a/4-guia/teoria-4/teoria-4.tex
+++ b/4-guia/teoria-4/teoria-4.tex
@@ -1,202 +1,252 @@
+\textit{Divisibilidad:}
 \begin{itemize}
-  \item $d$ divide a $a \to
-          d \divideA a \sisolosi \existe k \en \enteros : a = k \cdot d$
-  \item $ \divset{-a}{-|a|,\dots,-1,1,\dots,|a|}$.
+  \item Definición divisibilidad:
+        $$
+          \begin{array}{c}
+            \text{$d$ divide a $a$} \Sii{es lo mismo}[que decir] \text{$a$ es un múltiplo entero de $d$} \\
+            d \divideA a \sisolosi \existe k \en \enteros \text{ tal que } a = k \cdot d
+          \end{array}
+        $$
+
+  \item Conjunto de divisores de a:
+        $$
+          \divset{-a}{-|a|,\dots,-1,1,\dots,|a|}.
+        $$
+
   \item $d \divideA 0 $, dado que $0 = 0\cdot d$. Se desprende que $\divset{0}{\enteros - \set{0}}$
-  \item $\llave{l}{
-            d \divideA a \sisolosi -d \divideA a \text{ (pues }a = k \cdot d \sisolosi a = (-k) \cdot (-d))\\
-            d \divideA a \sisolosi d \divideA -a \text{ (pues} a = k \cdot d \sisolosi (-a) = (-k) \cdot d)\\
-            \entonces d \divideA a \sisolosi |d| \,\divideA\, |a|
-          }$
 
-  \item $\llave{l}{
-            d \divideA a \ytext d \divideA b \entonces d \divideA a + b\\
-            d \divideA a \ytext d \divideA b \entonces d \divideA a - b\\
+  \item A la hora de divisibilidad \textit{los signos no importan:}\par
+        $$
+          \llave{rcl}{
+            d \divideA a &\sisolosi& -d \divideA a \text{ (pues }a = k \cdot d \sisolosi a = (-k) \cdot (-d))\\
+            d \divideA a &\sisolosi& d \divideA -a \text{ (pues } a = k \cdot d \sisolosi (-a) = (-k) \cdot d)
+          }
+          \entonces \boxed{d \divideA a \sisolosi |d| \,\divideA\, |a|}
+        $$
+
+  \item Propiedades súper útiles para justificar los cálculos en los ejercicios:\par
+        $$\llave{l}{
+            d \divideA a \ytext d \divideA b \entonces d \divideA a \pm b\\
             d \divideA a \entonces d \divideA c \cdot a, \paratodo c \en \enteros\\
-            d \divideA a \entonces d \divideA c \cdot a\\
-            d \divideA a \entonces d^2 \divideA a^2 \ytext d^n \divideA a^n  \paratodo n \en \naturales\\
-            d \divideA a \cdot b \text{ no implica } d \divideA a \o d \divideA b. \text{ Por ejemplo } 6 \divideA 3 \cdot 4
-          }$
+            d \divideA a \Sii{\red{!!}} d^n \divideA a^n \paratodo n \en \naturales\\
+          }$$
+        $$
+          \text{\red{Error recurrente: }} d \divideA a \cdot b \not\entonces
+          \llave{c}{
+            d \divideA a\\
+            \otext\\
+            d \divideA b
+          }. \text{ Por ejemplo } 6 \divideA 3 \cdot 4
+          \text{ pero }
+          \llave{c}{
+            6 \noDivide 3 \\
+            \text{ni}\\
+            6 \noDivide 4
+          }
+        $$
+\end{itemize}\bigskip
 
-  \item
-        $\llave{l}{
-            \textit{$a$ es congruente a $b$ módulo $d$} \text{ si }   d \divideA a-b \text{. Se nota } \congruencia{a}{b}{d}\\
+\textit{Definición congruencia: }
+
+\begin{itemize}[label=$\scriptscriptstyle\blacksquare$]
+  \item \textit{Definición congruencia: }\par
+        $$\llave{l}{
+            \textit{'$a$' es congruente a '$b$' módulo '$d$'} \text{ si }   d \divideA a-b. \quad \text{ Notación } \boxed{\congruencia{a}{b}{d}}\\
             \congruencia{a}{b}{d} \sisolosi d \divideA a-b
-          }$
+          }
+        $$
 
-  \item $
+  \item Sumar ecuaciones de congruencia \textit{de mismo módulo}, conserva la congruencia: \par
+        $$
           \llave{c}{
             \congruencia{a_1}{b_1}{d}\\
             \vdots\\
             \congruencia{a_n}{b_n}{d}
           }
           \entonces \congruencia{a_1 + \cdots + a_n}{a_b + \cdots + b_n}{d}
-        $.
-  \item $
+        $$.
+  \item Multiplicar ecuacioines de congruencia \textit{de mismo módulo}, conserva la congruencia: \par
+        $$
           \llave{c}{
             \congruencia{a_1}{b_1}{d}\\
             \vdots\\
             \congruencia{a_n}{b_n}{d}
           }
-          \entonces \congruencia{a_1 \cdots a_n}{a_b \cdots b_n}{d} \flecha{$a_i = a \y b_i = b$}[$\paratodo i \en \set{1,\dots, n}$] \congruencia{a^n}{b^n}{d}$
-\end{itemize}
+          \entonces \congruencia{a_1 \cdots a_n}{a_b \cdots b_n}{d}
+        $$
+        Un caso particular con un simpático resultado:
+        $$
+          n \  \text{ecuaciones}
+          \llave{c}{
+            \congruencia{a}{b}{d}\\
+            \vdots\\
+            \congruencia{a}{b}{d}
+          }
+          \entonces \boxed{\congruencia{a^n}{b^n}{d}}
+        $$
+\end{itemize}\bigskip
 
-\textit{\underline{Algoritmo de división:}}\\
+\textit{\underline{Algoritmo de división:}}\par
 % macro local
 \newcommand{\condicionResto}[1]{\ub{0 \leq #1 < |d|}{\text{\tiny cumple condición de resto}}}
 \begin{itemize}
   \item
-        Dados $a, \, d \en \enteros$ con $d \distinto 0$,
-        \textit{\underline{existen}} $k$ (cociente),
-        $r \text{(resto)} \en \enteros$ tales que:\\
-        \[
-          \llaves{c}{
-            a =  k \cdot d + r,\\
-            \text{con } 0\leq r < |d|.
-          }
-        \]
-        Y además estos $k$ y $r$ son \textit{\underline{únicos}}.\\
-
-  \item \textit{Notación: } $r_d(a)$ es el resto de dividir a $a$ entre $d$
-
-  \item $\condicionResto{r} \entonces r = r_d(r)$. Un número que cumple condición de resto, es su resto.
-
-  \item $r_d(a) = 0 \sisolosi d \divideA a \sisolosi \congruencia{a}{0}{d}$
-
-  \item $\congruencia{a}{r_d(a)}{d}$. Tiene mucho sentido.
-
-  \item $\congruencia{a}{r}{d}$ con $\condicionResto{r} \entonces r = r_d(a)$
-
-  \item $\congruencia{r_1}{r_2}{d}$ con $\condicionResto{r_1,r_2} \entonces r_1 = r_2$
-
-  \item $\congruencia{a}{b}{d} \sisolosi r_d(a) = r_d(b)$. Dos números que son congruentes, tienen igual resto.
-
-  \item $r_d(a+b) = r_d(r_d(a) + r_d(b))$ ya que si
-        $ \llaves{c}{
-            \congruencia{a}{r_d(a)}{d}\\
-            \congruencia{b}{r_d(b)}{d}
-          } \to \congruencia{a + b}{r_d(a) + r_d(b)}{d}
-        $
-
-  \item $r_d(a \cdot b) = r_d(r_d(a) \cdot r_d(b))$ ya que si
-        $ \llaves{c}{
-            \congruencia{a}{r_d(a)}{d}\\
-            \congruencia{b}{r_d(b)}{d}
-          } \to \congruencia{a \cdot b}{r_d(a) \cdot r_d(b)}{d}$
-\end{itemize}
-
-\textit{\underline{Sistema de numeración: }}
-\begin{itemize}
-  \item Sea $d \en \naturales, d \geq 2$. Entonces $\paratodo a \en \naturales_0$ se puede
-        escribir en la forma
+        Dados $a,\, d \en \enteros$ con $d \distinto 0$, \textit{\underline{existen únicos}} $q$ (cociente),
+        $r \text{(resto)} \en \enteros$ tales que:
         $$
-          a = r_n d^n + r_{n-1} d^{n-1} + \cdots + r_1 d^1 + r_0
-        $$
-        con $0 \leq r_i < d$ para $0 \leq i \leq n$ con $r_n,\dots, r_0$ son únicos
-        en esas condiciones.
-
-  \item \textit{Notación:} $a = (r_n r_{n-1}\cdots r_1 r_0)_d =
           \llave{l}{
-            2020 = (2020)_{10} \\
-            2020 = (7E4)_{16} \\
-            2020 = (31040)_{5}
-          }$
-  \item $d^n = (1 \ub{0\cdots 0}{n})$
+            a =  q \cdot d + r,\\
+            \text{con } 0 \leq r < |d|.
+          }
+        $$
 
-  \item ¿Cuál es el número más grande que puedo escribir usando n cifras en base $d$?\\
-        $(\ub{d-1\quad d-1\quad \cdots\quad d-1}{n \text{ cifras}})_d =  \sumatoria{i=0}{n-1}(d-1)d^i = d^n -1$
+  \item \textit{Notación: } \boxed{r_d(a)} es el resto de dividir a $a$ entre $d$
 
-  \item ¿Cuántos números hay con $\leq n$ cifras?\\
-        Hay del $0$ hasta el $d^n -1$, es decir $d^n$.
+  \item $\condicionResto{r} \entonces r = r_d(r)$. Un número que cumple condición de resto, \underline{es su resto}.
 
-  \item ¿Cuál es la forma más rápida de calcular $2^{16}$
+  \item Así es como me gusta pensar a la congruencia. La derecha es el resto de dividir a $a$ entre $d$:
+        $$
+          \congruencia{a}{r_d(a)}{d}.
+        $$
 
-\end{itemize}
-\textit{\underline{Máximo común divisor: }}
+  \item Si $d$ divide al número $a$, entonces el resto de la división es 0:
+        $$
+          r_d(a) = 0 \sisolosi d \divideA a \sisolosi \congruencia{a}{0}{d}
+        $$
+
+
+  \item El resto es único:
+        $$
+          \congruencia{a}{r}{d} \text{ con }  \condicionResto{r} \entonces r = r_d(a)
+        $$
+
+        $$
+          \congruencia{r_1}{r_2}{d} \text{ con } \condicionResto{r_1,r_2} \entonces r_1 = r_2
+        $$
+
+  \item Dos números que son congruentes módulo $d$ entre sí, tienen igual resto al dividirse por $d$:
+        $$
+          \congruencia{a}{b}{d} \sisolosi r_d(a) = r_d(b).
+        $$
+
+  \item Propiedades útiles para los ejercicios de calcular restos:
+        $$
+          r_d(a+b) = r_d(r_d(a) + r_d(b))\quad \ytext \quad r_d(a \cdot b) = r_d(r_d(a) \cdot r_d(b))
+        $$
+        ya que si,
+        $$ \llaves{c}{
+            \congruencia{a}{r_d(a)}{d}\\
+            \congruencia{b}{r_d(b)}{d}
+          }
+          \Entonces{sumo}[ecuaciones]
+          \congruencia{a + b}{r_d(a) + r_d(b)}{d}
+        $$
+        y,
+        $$ \llaves{c}{
+            \congruencia{a}{r_d(a)}{d}\\
+            \congruencia{b}{r_d(b)}{d}
+          }
+          \Entonces{multiplico}[ecuaciones]
+          \congruencia{a \cdot b}{r_d(a) \cdot r_d(b)}{d}
+        $$
+\end{itemize}\bigskip
+
+
 %%%%%% Macro local
 \def\mcd{(a:b)}
 \def\D{\mathcal D}
 \def\cz{s\cdot a + t \cdot b}
 %%%%%% fin Macro local
-\begin{itemize}
+
+\textit{Máximo común divisor: }
+
+\begin{itemize}[label=\tiny\faIcon{grimace}]
   \item Sean $a,b \en \enteros$, \underline{no ambos nulos}. El MCD entre $a$ y $b$ es el mayor de los divisores
-        común entre $a$ y $b$ y se nota $\mcd$
+        común entre $a$ y $b$ y se nota:
+        $$
+          \boxed{
+            \text{máximo común divisor: MCD}= \mcd
+          }
+        $$
 
-  \item $\mcd \en \naturales$ (pues $\mcd \geq 1$) siempre existe.
-        $\D com_+(a,b) = \D_+(a) \inter \D_+(b) \distinto \vacio
-          \text{ pues } 1 \en \D com_+(a,b)$.
-        Se ve también que está acotado por el menor entre $a$ y $b$, pues si
-        $d \divideA a \y d \divideA b \entonces d \leq |a| \y d \leq|b|$ y es \underline{único}.
+  \item $\mcd \en \naturales$ (pues $\mcd \geq 1$) \textit{siempre existe} y es \textit{único}.
 
-  \item Sean $a$ y $b \en \enteros$, no ambos nulos.\\
-        \begin{itemize}
-          \item $\mcd = (\pm a : \pm b)$
-          \item $\mcd = (b:a)$
-          \item $(a:1) = 1$
-          \item $(a:0) = |a|,\ \paratodo a \en \enteros -\set{0}$
-          \item si $b \divideA a \entonces \mcd = |b|$ si $b \en \enteros - \set{0}$
-          \item $\mcd = (a: b+na)$ con $n \en \enteros$
-          \item $\mcd = (a: r_a(b))$ con $n \en \enteros$
+  \item Propiedades del $(a:b)$, con $a$ y $b \en \enteros$, no ambos nulos.\par
+        \begin{itemize}[label={\tiny\faIcon{atom}}]
+          \item Los signos no importan: $\mcd = (\pm a : \pm b)$
+          \item Es simétrico: $\mcd = (b:a)$
+          \item Entre 1 y $a \en \enteros$ siempre $(a:1) = 1$
+          \item Entre 0 y $a$ siempre $(a:0) = |a|,\ \paratodo a \en \enteros -\set{0}$
+          \item si $b \divideA a \entonces \mcd = |b|$ con $b \en \enteros - \set{0}$
+          \item \red{Útil para ejercicios}: $\mcd = (a: b+na)$ con $n \en \enteros$
+          \item \red{Útil para ejercicios}: $\mcd = (a: r_a(b))$ con $n \en \enteros$
+          \item \red{Útil para ejercicios}: Sean $a,\ b \en \enteros$ no ambos nulos, y sea $k \en \naturales$
+                $$
+                  (ka:kb) = k(a:b)
+                $$
         \end{itemize}
 
-  \item \textit{Algoritmo de Euclides}:
-        Sean $a, b \en \enteros$ con $b \distinto 0$, entonces, $\paratodo k \en \enteros$, se tiene:
-        $\mcd = (b:a-kb)$. En particular, como $r_b(a) = a-kb$, con $k$ el cociente (para $b\distinto 0$), se tiene
-        $\mcd = (b: r_b(a))$
+  \item \textit{Algoritmo de Euclides}: Para encontrar el $(a:b)$ con números feos. Hay que saber hacer esto. Fin.
+        \red{¡Se usa de acá hasta el final de la materia!}.\par
 
-  \item \textit{Combinacion Entera}:
+  \item \textit{Combinacion Entera}: Otra herramienta gloriosa que sale de hacer \textit{Euclides}.
+        \red{¡Se usa de acá hasta el final de la materia!}.\par
         Sean $a,b \en \enteros$ no ambos nulos, entonces $\existe s,\ t \en \enteros$ tal que $\mcd = \cz$.
-        \begin{itemize}
+        \begin{itemize}[label=\tiny\faIcon{atom}]
           \item Todos los divisores comunes entre $a$ y $b$ dividen al $\mcd$. Sean $a,b \en \enteros$ no ambos nulos, $d \en \enteros - \set{0}$. Entonces:
-                \[
-                  d \divideA a \ytext d \divideA b \sisolosi d \divideA \ub{\mcd}{\cz}
-                \].
+                $$
+                  d \divideA a \ytext d \divideA b \sisolosi d \divideA \ub{\mcd}{\cz}.
+                $$
+
           \item Sea $c \en \enteros$ entonces $\existe s', t' \en \enteros$ con $c = s'a + t'b \sisolosi \mcd \divideA c$.
 
           \item Todos los números múltiplos del MCD se escriben como combinación entera de $a$ y $b$.
+
           \item Si un número es una combinación entera de $a$ y $b$ entonces es un múltiplo del MCD.
-          \item Sean $a,\ b \en \enteros$ no ambos nulos, y sea $k \en \naturales$
-                \[
-                  (ka:kb) = k(a:b)
-                \]
         \end{itemize}
-  \item \textit{Coprimos: }
-        \begin{itemize}
-          \item
-                Dados $a,b \en \enteros$, no ambos nulos, se dice que son \textit{coprimos} si $\mcd = 1$
-                \[
-                  \begin{array}{c}
-                    a \cop b \sisolosi \mcd = 1 \\
-                    \qquad a\cop b \sisolosi \existe s,\ t \en \enteros \text{ tal que } 1 = \cz
-                  \end{array}
-                \]
-          \item
-                Sean $a,b \en \enteros$, no ambos nulos. Entonces $\frac{a}{\mcd}\cop \frac{b}{\mcd}$.
-          \item Coprimizar es :
-                $\llaves{l}{
-                    a = \mcd \cdot a'\\
-                    b = \mcd \cdot b'
-                  }\to a' \ytext b'$ son coprimos.
+\end{itemize}
+\bigskip
 
-          \item Sean $a, c, d \en \enteros$ con $c,d$ no nulos. Entonces:
-                \[
-                  c \divideA a \ytext d \divideA a \ytext c \cop d \red{\sisolosi} c\cdot d \divideA a
-                \]
-          \item Sean $a, b, d \en \enteros$ con $d \distinto 0$. Entonces:
-                \[
-                  d \divideA a \cdot b \ytext d \cop a   \entonces d \divideA b
-                \]
+\textit{Coprimos: }
 
-        \end{itemize}
+\begin{itemize}
+  \item Definición coprimos:\par
+        Dados $a,b \en \enteros$, no ambos nulos, se dice que son \textit{coprimos} si $\mcd = 1$
+        $$
+          \begin{array}{rcl}
+            a \cop b       & \sisolosi & \mcd = 1                                            \\
+            \qquad a\cop b & \sisolosi & \existe s,\ t \en \enteros \text{ tal que } 1 = \cz
+          \end{array}
+        $$
 
-  \item \textit{\underline{Primos y Factorización:}}
+  \item Sean $a,b \en \enteros$ no ambos nulos.\textit{coprimizar} los números es dividirlos por su máximos común divisor, para
+        obtener un nuevo par que sea coprimo:
+        $$
+          (a:b)\distinto 1 \flecha{coprimizar} a' = \frac{a}{\mcd},\, b' = \frac{b}{\mcd}, \entonces \boxed{(a':b') = 1} \Tilde
+        $$
+
+  \item \red{¡Causa de muchos errores!} Sean $a, c, d \en \enteros$ con $c,d$ no nulos. Entonces:
+        $$
+          c \divideA a \ytext d \divideA a \ytext c \cop d \Sii{\red{!!}} c\cdot d \divideA a
+        $$
+        Al ser $c$ y $d$ coprimos, pienso a $a$ como un número cuya factorización tiene a $c$, $d$ y la coprimicidad hace que en la factorización
+                aparezca $c \cdot d$. {\tiny(no sé, así lo piensa mi \color{pink}{\faIcon{brain}})}
+
+  \item Sean $a, b, d \en \enteros$ con $d \distinto 0$. Entonces:
+        \[
+          d \divideA a \cdot b \ytext d \cop a   \entonces d \divideA b
+        \]
+\end{itemize}
+
+\begin{itemize}
+  \item \textit{Primos y Factorización: }
         \begin{itemize}
           \item Sea $p$ primo y sean $a,b \en \enteros$. Entonces:
-                \[
+                $$
                   p \divideA a\cdot b \entonces p \divideA a \o p \divideA b
-                \]
-          \item \textit{Si $p$ divide a algún producto de números, tiene que dividir a alguno de los factores $\to$}\\
-                Sean $a_1,\dots, a_n \en \enteros$:\\
+                $$
+          \item \textit{Si $p$ divide a algún producto de números, tiene que dividir a alguno de los factores $\to$}\par
+                Sean $a_1,\dots, a_n \en \enteros$:\par
                 \begin{center}
                   $
                     \llave{l}{
@@ -204,28 +254,30 @@
                       p \divideA a^n \entonces p \divideA a.
                     }$
                 \end{center}
-          \item Si $a \en \enteros$, $p$ primo:\\
+
+          \item Si $a \en \enteros$, $p$ primo:\par
                 \begin{center}
                   $\llave{l}{
                       (a:p) = 1 \sisolosi p \noDivide a\\
                       (a:p) = p \sisolosi p \divideA a
                     }$
                 \end{center}
+
           \item Sea $n \en \enteros - \set{0},\,
                   n = \ub{s }{\set{-1,1}} \cdot \productoria{i=1}{k} p_i^{\alpha_i} =
                   p_1^{\alpha_1} \cdots p_k^{\alpha_k}$
-                su factorización en primos. Entonces todo divisor $m$ positivo de $n$ se escribe como:\\
-                \[
+                su factorización en primos. Entonces todo divisor $m$ positivo de $n$ se escribe como:\par
+                $$
                   \llave{c}{
                   \text{Si } m \divideA n \to  m = p_1^{\beta_1} \cdots p_k^{\beta_k}
                   \text{ con } 0 \leq \beta_i \leq \alpha_i,\, \paratodo i\, 1\leq i \leq k\\
                   \text{ y hay } \\
                   (\alpha_1 + 1) \cdot (\alpha_2 + 1)\cdots (\alpha_k + 1) = \productoria{i=1}{k} \alpha_i +1 \\
                   \text{divisores positivos de } n.
-                  }\]
-
+                  }
+                $$
           \item Sean $a$ y $b \en \enteros$ no nulos, con
-                $
+                $$
                   \llave{l}{
                   a = \pm p_1^{m_1}\cdots p_r^{m_r} \text{ con } m_1,\cdots, m_r \en \enteros_0\\
                   b = \pm p_1^{n_1}\cdots p_r^{n_r} \text{ con } n_1,\cdots, n_r \en \enteros_0\\
@@ -234,7 +286,7 @@
                   \entonces [a:b] = p_1^{max\set{m_1,n_1}}\cdots p_r^{max\set{m_r,n_r}}
                   }
                   }
-                $
+                $$
 
           \item Sean $a, d \en\enteros$ con $d \distinto 0$ y sea $n \en \naturales$. Entonces
                 $$
